--- a/README.html
+++ b/README.html
@@ -380,7 +380,7 @@ summary {
 <ul>
 <li>2018.02 단국대학교 공예학과 졸업</li>
 <li>2014.03 단국대학교 공예학과 입학</li>
-<li>2014.02 JAKARTA INTERNATION KOREA SCHOOL 졸업</li>
+<li>2014.02 JAKARTA INTERNATIONER KOREA SCHOOL 졸업</li>
 </ul>
 <p><strong>경력</strong></p>
 <ul>
@@ -396,7 +396,7 @@ summary {
 </ul>
 <p>자격증</p>
 <ul>
-<li>보석 감정사</li>
+<li></li>
 </ul>
 </div>
 
