--- a/R을 위한통계/ch03_data_transformation/ch03_data_transformation.html
+++ b/R을 위한통계/ch03_data_transformation/ch03_data_transformation.html
@@ -9,7 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="43" />
+<meta name="author" content />
 
 
 <title>3장 데이터 변형</title>
@@ -1568,7 +1568,6 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">3장 데이터 변형</h1>
-<h4 class="author">43</h4>
 <h4 class="date">2020 9 30</h4>
 
 </div>
